Fix: yml syntax for multi-line run

--- a/.github/workflows/design_study.yml
+++ b/.github/workflows/design_study.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@master
-      - run: $CXX -o RingIndex RingIndex.cc
-        run: ./RingIndex
-        working-directory: './design_study'
+      - working-directory: './design_study'
+        run: |
+          $CXX -o RingIndex RingIndex.cc
+          ./RingIndex
