--- a/.github/workflows/design_study.yml
+++ b/.github/workflows/design_study.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@master
       - working-directory: './design_study'
         run: |
-          g++ -o RingIndex RingIndex.cc
+          g++ -O3 -I../cpprb -Wall -Wextra -o RingIndex RingIndex.cc
           ./RingIndex
