Fix: Change compiler flag to C++17 from C++2a
G++ 7.4.0 on GitHub Runner does not support C++2a.

--- a/.github/workflows/design_study.yml
+++ b/.github/workflows/design_study.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@master
       - working-directory: './design_study'
         run: |
-          g++ -std=c++2a -O3 -I../cpprb -Wall -Wextra -o RingIndex RingIndex.cc
+          g++ -std=c++17 -O3 -I../cpprb -Wall -Wextra -o RingIndex RingIndex.cc
           ./RingIndex
