--- a/.github/workflows/design_study.yml
+++ b/.github/workflows/design_study.yml
@@ -15,3 +15,8 @@ jobs:
         run: |
           g++ -std=c++17 -O3 -I../cpprb -Wall -Wextra -o RingIndex RingIndex.cc
           ./RingIndex
+      - uses: actions/setup-python@v1
+        with:
+          python-version '3.7'
+      - working-directory: './design_study'
+        run: python RingIndex.py
