--- a/.github/workflows/design_study.yml
+++ b/.github/workflows/design_study.yml
@@ -18,5 +18,6 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
+      - run: pip install cython
       - working-directory: './design_study'
         run: python RingIndex.py
