--- a/.github/workflows/design_study.yml
+++ b/.github/workflows/design_study.yml
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
-      - run: pip install cython
+      - run: pip install Cython
       - working-directory: './design_study'
         run: python RingIndex.py
