Set Time out at 5 min.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
+    timeout-minutes: 5
     strategy:
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
