--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -194,10 +194,10 @@ emacs:
   image: iquiw/alpine-emacs
   stage: build
   script:
-    - emacs --debug-init --batch README.org -l site/init.el --eval '(org-hugo-export-wim-to-md :all-subtrees nil t)'
-    - emacs --debug-init --batch CHANGELOG.org -l site/init.el --eval '(org-hugo-export-wim-to-md :all-subtrees nil t)'
+    - emacs --batch README.org --eval "(setq debug-on-error t)" -l site/init.el --eval '(org-hugo-export-wim-to-md :all-subtrees nil t)'
+    - emacs --batch CHANGELOG.org --eval "(setq debug-on-error t)" -l site/init.el --eval '(org-hugo-export-wim-to-md :all-subtrees nil t)'
     - cd site
-    - emacs --debug-init --batch site.org -l init.el --eval '(org-hugo-export-wim-to-md :all-subtrees nil t)'
+    - emacs --batch site.org --eval "(setq debug-on-error t)" -l init.el --eval '(org-hugo-export-wim-to-md :all-subtrees nil t)'
   artifacts:
     paths:
       - site/content
