--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -192,6 +192,9 @@ coverage:
 
 emacs:
   image: iquiw/alpine-emacs
+  variables:
+    <<: *global-variables
+    EMACS_PACKAGES: ox-hugo
   stage: build
   script:
     - emacs --batch README.org --eval "(setq debug-on-error t)" -l site/init.el --eval '(org-hugo-export-wim-to-md :all-subtrees nil t)'
